--- a/public/stylesheets/stylemain.css
+++ b/public/stylesheets/stylemain.css
@@ -682,5 +682,5 @@ border:1px; border-style:solid; border-color:#999999;
 #logo1 {
 	width: 1003px;
 	height: 198px;
-	background: #f4f1f1 url(/images/plasticizer.png) repeat-y 0px 0px;
+	background: #f4f1f1 url(/images/woodchem.jpg) repeat-y 0px 0px;
 }
