--- a/views/agenda.ejs
+++ b/views/agenda.ejs
@@ -33,7 +33,7 @@
 	<div id="main">
 		<div id="site">
 			<div id="logo1" style="display:block;">
-				<div id="menu" style="padding-top:22px;float:right;">
+				<div id="menu" style="margin-top: 20px;float:right;">
 					<ul id="ul">
 						<li id="menu_corner" style="float:left; width:20px; height:33px;"></li>
 						<li style="width:53px;background-color:#222222;"><a href="http://wiz-biz.com/">Home</a></li>
@@ -45,268 +45,17 @@
 					</ul>
 				</div>
 			</div>
-			
-	<div id="divcontent" class="content" style="width:1003px;">
-		<div style="width:750px;padding-right:0px;border:inset 0px red;margin-left:130px;" id="content">
-			<table cellpadding="0" cellspacing="0" border="1" style="vertical-align:top;">
-				<colgroup>
-					<col style="width:50%;">
-					<col style="width:50%;">
-				</colgroup>
-          
-				<tbody id="agendaTableBody" >
-					<tr>
-						<td style="vertical-align:top;">
-						<div style="padding-right:1px;padding-left:1px;">
-							<table border="0">
-								<tbody>
-								<tr><td class="daycap" colspan="2"> Day 1 - [12 March, 2015 - Thursday]</td></tr>
-								
-								<tr>
-									<td class="TD_time">
-									  <span>09:20</span>
-									</td>
-									
-									<td class="TD_title" colspan="0"><div>Opening Remarks<br></div>
-									</td>
-								</tr>
-								<tr>
-									<td class="TD_time">
-									  <span>09:30</span>
-									</td>
-									
-									<td class="TD_title" colspan="0">
-										<div>
-											General Chemical Industry Trends and Propylene Market Outlook<br>
-										</div>
-									</td>
-								</tr>
-								<tr>
-									<td class="TD_time">
-									  <span>10:00</span>
-									</td>
-									
-									<td class="TD_title" colspan="0">
-										<div>Analysis on Asia PA Market<br></div>
-										<span>- India PA supply</span></br>
-										<span>- China PA</span></br>
-									</td>
-								</tr>									
-								<tr>
-									<td class="TD_time">
-									  <span>10:30</span>
-									</td>
-									
-									<td class="TD_title" colspan="0">
-										<div>Coffee Break<br></div>
-									</td>
-								</tr>
-								<tr>
-									<td class="TD_time">
-									  <span>11:00</span>
-									</td>
-									
-									<td class="TD_title" colspan="0">
-										<div>
-											Regional Developments in Plasticizer Alcohols and Plasticizers
-											<br>
-										</div>
-									</td>
-								</tr>
-								<tr>
-									<td class="TD_time">
-									  <span>11:30</span>
-									</td>
-									
-									<td class="TD_title" colspan="0">
-										<div>
-											Raise of China Oxo Alcohol Capacity and its Influence on Global Market
-											<br>
-										</div>
-										<span>- Sharp decrease of Oxoalcohol import volume</span></br>
-										<span>- Operation rate of Chinese Oxoalcohol plants</span></br>
-										<span>- Will China export become frequent in near future?</span>
-										</br>
-									</td>
-								</tr>	
-								<tr>
-									<td class="TD_time">
-									  <span>12:00</span>
-									</td>
-									
-									<td class="TD_title" colspan="0">
-										<div>Buffet Lunch<br></div>
-									</td>
-								</tr>
-								<tr>
-									<td class="TD_time">
-									  <span>14:00</span>
-									</td>
-									
-									<td class="TD_title" colspan="0">
-										<div>European Oxo Alcohol Market Outlook<br></div>
-									</td>
-								</tr>
-								<tr>
-									<td class="TD_time">
-									  <span>14:30</span>
-									</td>
-									
-									<td class="TD_title" colspan="0">
-										<div>Development of Middle East Oxo Alcohol<br></div>
-										<span>- Growing capacity and importance of ME region inthe global OA supply chain</span>
-										</br>
-									</td>
-								</tr>
-								<tr>
-									<td class="TD_time">
-									  <span>15:00</span>
-									</td>
-									
-									<td class="TD_title" colspan="0">
-										<div> 
-											Indian Oxo-alcohol & Plasticizer Industry: Market Overview
-										<br>
-										</div>
-									</td>
-								</tr>
-								<tr>
-									<td class="TD_time">
-									  <span>16:00</span>
-									</td>
-									
-									<td class="TD_title" colspan="0">
-										<div>China Plasticizer Market Outlook<br></div>
-										<span>- Polymer market: China &global perspective</span></br>
-										<span>- Recent China market trends for plasticizers</span></br>
-										<span>- Conclusion and future estimates</span></br>
-									</td>
-								</tr>
-								<tr>
-									<td class="TD_time">
-									  <span>16:30</span>
-									</td>
-									
-									<td class="TD_title" colspan="0">
-										<div>Turkey Plasticizer Market Overview<br></div>
-										<span>- OA demand in Turkey</span></br>
-										<span>- Plasticizer market in Turkey</span></br>
-									</td>
-								</tr>
-								<tr>
-									<td class="TD_time">
-									  <span>17:00</span>
-									</td>
-									
-									<td class="TD_title" colspan="0">
-										<div>Development of DOTP - New Type of Plasticizer<br></div>
-										<span>- Cost competitiveness</span></br>
-										<span>- Replacement of DOP and DINP</span></br>
-										<span>- Capacity analysis</span></br>
-									</td>
-								</tr>
-								<tr>
-									<td class="TD_time">
-									  <span>18:00</span>
-									</td>
-									
-									<td class="TD_title" colspan="0">
-										<div>Buffet Dinner<br></div>
-									</td>
-								</tr>
-								</tbody>
-							</table>
-						</td>
-						
-						<td style="vertical-align:top;"><div style="padding-right:1px;padding-left:1px;">
-							<table border="0">
-								<tbody>
-									<tr><td class="daycap" colspan="2"> Day 2 - [13 March, 2015 - Friday] &nbsp &nbsp &nbsp</td></tr>
-									<tr>
-									<td class="TD_time">
-									  <span>09:00</span>
-									</td>
-									
-									<td class="TD_title" colspan="0">
-										<div>Asia PVC Compound Market Outlook<br></div>
-										<span>- Asia capacity and price analysis</span></br>
-										<span>- Trade flow for PVC compound</span></br>
-										<span>- Non phthalate PVC compounds</span></br>
-									</td>
-								</tr>
-								<tr>
-									<td class="TD_time">
-									  <span>09:30</span>
-									</td>
-									
-									<td class="TD_title" colspan="0">
-										<div>Overview of Asia PVC Market<br></div>
-										<span>- Challenge of supply and demand</span></br>
-										<span>- How to ease impact of financial turmoil on spot PVC price</span></br>
-										<span>- Cost support and market consolidation</span></br>
-									</td>
-								</tr>
-								<tr>
-									<td class="TD_time">
-									  <span>10:00</span>
-									</td>
-									
-									<td class="TD_title" colspan="0">
-										<div>Evaluation of Processing Performance of Bio-Based Plasticizers in Paste PVC Applications<br></div>
-									</td>
-								</tr>	
-								<tr>
-									<td class="TD_time">
-									  <span>10:30</span>
-									</td>
-									
-									<td class="TD_title" colspan="0">
-										<div>Coffee Break<br></div>
-									</td>
-								</tr>								
-								<tr>
-									<td class="TD_time">
-									  <span>11:00</span>
-									</td>
-									
-									<td class="TD_title" colspan="0">
-										<div>PVC Floor<br></div>
-									</td>
-								</tr>
-								<tr>
-									<td class="TD_time">
-									  <span>11:30</span>
-									</td>
-									
-									<td class="TD_title" colspan="0">
-										<div>Bio-Butanol<br></div>
-										<span>- New progress of bio-butanol production</span></br>
-										<span>- Commercialization of bio-butanol and its impact</span>
-										</br>
-									</td>
-								</tr>	
-								<tr>
-									<td class="TD_time">
-									  <span>12:00</span>
-									</td>
-									
-									<td class="TD_title" colspan="0">
-										<div>Buffet Lunch<br></div>
-									</td>
-								</tr>	
-								</tbody>
-							</table>
-						</td>
-				  
-					</tr>
-				</tbody>
-			</table>
-			
+			<div id="divcontent" style="width:1003px;background-color:#f5f4f3;">
+				<div align="center">
+						<img src="/images/agenda.png"></img>
+				</div>
+			</div>
 		</div>
+		
+		
+
 	</div>
-		</div>
-	</div>
-</div>
+
 
  
 </body>
