--- a/views/event.ejs
+++ b/views/event.ejs
@@ -18,10 +18,20 @@
 			color:#FFFFFF; 
 			text-decoration:none; 
 		} 
+
+		.image-title{font-size:17px;color:red;font-weight:bold;}
+
+		.image ul{list-style:none;}
+
+		.image ul li{float:left;margin-right:30px;margin-left:-20px;}
+
+		#highlight > li{list-style-type:none;padding-bottom: 5px;margin-left: -30px;}
+
+		#attend > li{list-style-type:none;padding-bottom: 5px;margin-left: -30px;}
 	</style>
 <head>
 	<title>
-		WIZ | Plasticizer
+		WIZ | Woodchem
 	</title>
 </head>
 
@@ -29,79 +39,70 @@
 	<div id="main">
 		<div id="site">
 			<div id="logo1" style="display:block;">
-				<div id="menu" style="padding-top:22px;float:right;">
+				<div id="menu" style="margin-top: 20px;float:right;">
 					<ul id="ul">
 						<li id="menu_corner" style="float:left; width:20px; height:33px;"></li>
-						<li style="width:53px;background-color:#222222;"><a href="http://wiz-biz.com/">Home</a></li>
+						<li style="width:53px;background-color:#222222;"><a href="http://www.wiz-biz.com/">Home</a></li>
 						<li style="width:104px;background-color:#222222;" class="current_page_item"><a href="/event">About Event</a></li>
 						<li style="width:111px;background-color:#222222;"><a href="/agenda">Event Agenda</a></li>
 						<li style="width:128px;background-color:#222222;"><a href="/speaker">Speaker Profile</a></li>
 						<li style="width:102px;background-color:#222222;"><a href="/register">Register Me</a></li>
-						<li style="width:85px;background-color:#222222;"><a href="/sponsor">Sponsor</a></li>
+						<li style="width:85px;background-color:#222222;"><a href="/sponsor">Workshop</a></li>
 					</ul>
 				</div>
 			</div>
-			<div id="divcontent" class="content" style="width:1003px;">
-				
-				<table border="0" align="left">
-					<tbody>
-						<tr>
-							<td style="vertical-align:top;">
-								<div style="width:785px;padding-right:0px;" id="content">
-									<div style=" float:left; width:100%; background-color:#FFFFFF; margin-bottom:12px;">
-										 <div style="float:left; width:600px; text-align:left; background-color:#FFFFFF; overflow:hidden;" align="left"> 
-											 <span style="font-size:15px;font-weight:bold; color:red;text-align:left;">Plasticizer & Feedstock,12-13 March,2015,Hong Kong, China</span><br>
-										 </div>
-									</div>
-								</div>
-							</td>
-						</tr>
-								
-					</tbody>
-				</table>
-				
-		<div class="content" style="width:943px;padding-left:30px;padding-right:30px;font-size:14px;">
-				<div class="feedTitle">
-					Welcome to "Plasticizer & Feedstock 2015"
-				</div>
-						
-				<div style="background-color:#f5f4f3;font-size:14px;">
-					<span >
-						Plasticizer & Feedstock Conference 2014 was held in Kuala Lumper Malaysia on March 3rd.-4th. by Wiz Biz Company.
-					</span></br></br>
 
-					<span>
-						As the only plasticizer conference in Asia,the annual event for the plasticisers industry has always providing a great platform to meet with major players and share view on the future trend of plasticizer and feedstock market,which has attracted a various rang of key person and dicision maker in this industry.
+			<div id="divcontent" class="content" style="width:1003px;">
+				<div style="float:left;width:600px;text-align:left;overflow:hidden;padding-left:5px;"> 
+					<span style="font-size:1WoodChem 2015,4th-5th November,Kuala Lumpur, Malaysia4px;font-weight:bold;color:red;text-align:left;">
+						
 					</span>
 				</div>
 				
-				</br></br>
-
-				<div class="feedTitle">Company introduction</div>
-				<div class="feedTitle1">Posted on : 11 April, 2014 <br></div></br>
-				<div style="background-color:#f5f4f3;">
-					<span >
-						<a href="http://wiz-biz.com" title="Wiz Business"  target="_blank">WIZ Business</a> is committed to providing highly informative conference, professional training, factory visit and other customized activities for corporate clients all over the world.
-					</span></br>
-					<span>
-				 		WIZ Business was set up in Hong Kong to be closer to the fast growing Asian markets and Shanghai office opened its doors as a gateway to China. 
-					</span></br></br>
-					<span>
-						We recognize the importance of networking and information for our clients, and aim to hold our events conducive to your business. High quality analysis, precise insights and strategic directions are designed by extensive research, industrial experts and business leaders in all the commodities area including chemicals, food, alternative energy and etc.
-					</span></br></br>
-					<span>
-						Our services will not only be provided during the events, but also before the events and after the events continuously. Besides, we are extremely good at providing international services and insights with local presence to the industry and your business.
-					</span></br></br>
-					<span>
-						We provide the ideal platform for your company to promote your products and services, establish your brand, build new business relationship and secure your position as a leader in the industry in a cost-effective way. 
-					</span></br></br>
-					<span>
-						Becoming a delegate, speaker or sponsor of WIZ conference gives you the opportunity to reach industry decision makers along the entire value chain. We can also offer sponsorship opportunities meeting individual requirements and budget. Please contact us and we can customize your ideas to suit your objective.
-					</span></br></br>
-				</p>
+				<div style="float:left;width:40%;padding-left:5px;padding-top:5px;">
+					<h3 style="font-size:14px;">Welcome to Wiz WoodChem in Kuala Lumpur</h3>
+					<p>
+						It is the pleasure and honor of Wiz Business Company to invite you to the WoodChem Conference in Kuala Lumpur, Malaysia in November 2015. 
+					</p>
+					<p>
+						We are expecting more than 60 participants of all related industrial players from Middle East Area, Europe, Africa, SE Asia, China, India, Japan, Korea, Turkey, Russia and all over the world. The conference will focus on Wood Adhesives and Feedstock, Wood Adhesives and Resin Chemistry, Wood Panel and Plywood, Forest Industry.
+					</p>
+					<p>
+						WIZ WoodChem Conference is committed to provide a good platform for communication and networking among this industry for both commercial and technical issues.
+					</p>
+					<p>
+						<span style="font-weight:bold;">Reviews 2013 </span>- Wiz Biz held “Melamine Focus 2013” conference on November 28th in Kuala Lumper, Malaysia and had good networking with all the speakers and delegates from Malaysia, Singapore, Thailand, Indonesia, China, India, Iran and Europe. 
+					</p>
+					<p>
+						<span style="font-weight:bold;">Reviews 2014 </span>- “Wood Adhesives & Feedstock 2014” conference was held successfully in beautiful Bali, Indonesia. With the Supports of HUNTSMAN, EMFORMA and ASMINDO, the event gathered around 50 key industry players in Asian region.
+					</p>
+				</div>
+				<div style="float:left;width:25%;margin-left:12px;padding-top:5px;">
+					<h3 style="font-size:14px;margin-left:20px;">Highlights 2015</h3>
+					<ul id="highlight">
+						<li>- Adhesives Feedstock</li>
+						<li>- Ongoing Pricing & Trend</li>
+						<li>- Latest Worldwide Forest Industry</li>
+						<li>- Latest Worldwide Melamine</li>
+						<li>- Supply & Demand Situation</li>
+						<li>- Resin & Wood Chemistry</li>
+						<li>- Woodworking Market</li>
+						<li>- Panel & Plywood Market</li>
+					</ul>
+				</div>
+				<div style="float:left;width:30%;margin-left:12px;padding-top:5px;">
+					<h3 style="font-size:14px;margin-left:20px;">Who Will Attend 2015</h3>
+					<ul id="attend">
+						<li>- Resins Producers</li>
+						<li>- Plywood/MDF/Particle Board/Wood Panel/Fiber Board</li>
+						<li>- Moulding Compounds Producers</li>
+						<li>- Panel Technology & Solutions</li>
+						<li>- Equipment & Tech Providers</li>
+						<li>- Consulting Company</li>
+						<li>- Others</li>
+					</ul>
 				</div>
 			</div>
-
 		</div>
 	</div>
 
