--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,11 +2,11 @@
     <link rel="shortcut icon" href="/images/wiz-icon.png">
 	<link rel="stylesheet" type="text/css" href="/stylesheets/stylemain.css">
 	<style>
-	
+		#fee > li{margin-bottom: 5px;}
 	</style>
 <head>
 	<title>
-		WIZ | Plasticizer
+		WIZ | Woodchem
 	</title>
 </head>
 
@@ -14,7 +14,7 @@
 	<div id="main">
 		<div id="site">
 			<div id="logo1" style="display:block;">
-				<div id="menu" style="padding-top:22px;float:right;">
+				<div id="menu" style="margin-top: 20px;float:right;">
 					<ul id="ul">
 						<li id="menu_corner" style="float:left; width:20px; height:33px;"></li>
 						<li style="width:53px;background-color:#222222;"><a href="http://wiz-biz.com/">Home</a></li>
@@ -26,42 +26,43 @@
 					</ul>
 				</div>
 			</div>
-			<div id="divcontent" class="content" style="width:1003px;height:450px;background-color:#f5f4f3;">
-				<div style="float:left;width:100%;">
-					<table border="0" align="left">
-						<tbody>
-							<tr>
-								<td style="vertical-align:top;">
-									<div style="width:785px;padding-right:0px;" id="content">
-										<div style=" float:left; width:100%; margin-bottom:12px;">
-											 <div style="float:left; width:600px; text-align:left; overflow:hidden;" align="left"> 
-												 <span style="font-size:15px;font-weight:bold; color:red;text-align:left;">Plasticizer & Feedstock, 12-13 March, 2015,Hong Kong, China<br></span>
-											 </div>
-										</div>
-									</div>
-								</td>
-							</tr>
-						
-							<tr>
-								<td style="text-align:left;padding-left:10px;vertical-align:top;padding-right:10px;padding-top:5px;">
-									<span style="font-size:15px;font-weight:bold;margin-left:250px;">Registration Hotline:</span></br>
-									<span style="font-size:13px;margin-left:250px;">Ms. Jennifer Yang</span></br>
-									<span style="font-size:13px;margin-left:250px;">Tel: +86-21-60246389</span></br>
-									<span style="font-size:13px;margin-left:250px;">Mob: +86-137-6114-6284</span></br>
-									<span style="font-size:13px;margin-left:250px;">E-mail: <u style="color:blue;">info@wiz-biz.com</u></span>
-								</td>
-							</tr>
-							<tr>
-								<td style="text-align:left;padding-left:10px;vertical-align:top;padding-right:10px;padding-top:5px;">
-									<span style="font-size:15px;font-weight:bold;margin-left:250px;">Registration fee:</span></br>
-									<span style="font-size:13px;margin-left:250px;">USD 1295 for one person</span></br>
-									<span style="font-size:13px;margin-left:250px;">USD 1095 per for two or more person from one company</span></br>
-								</td>
-							</tr>
-						</tbody>
-					</table>
+			<div id="divcontent" class="content" style="width:1003px;background-color:#f5f4f3;">
+				<div style="float:left;width:600px;text-align:left;overflow:hidden;padding-left:5px;"> 
+					<span style="font-size:14px;font-weight:bold;color:red;text-align:left;">
+						WoodChem 2015,4th-5th November,Kuala Lumpur, Malaysia
+					</span>
+				</div>
+				<div style="float:left;width:40%;padding-left:5px;padding-top:5px;">
+					<h3 align="center" style="font-size:14px;align:center;">Registration</h3>
+					<p align="center">Ms. Jenny Yang</p>
+					<p align="center">Tel: +86-21-60246389</p>
+					<p align="center">E-mail: info@wiz-biz.com</p>
+				</div>
+				<div style="float:left;width:40%;padding-left:5px;padding-top:5px;">
+					<h3 align="center" style="font-size:14px;align:center;">Registration fee</h3>
+					<ul id="fee">
+						<li>Early Bird US$895/per/net Before September 25th</li>
+						<li>US$ 1295 per/net for 1 person</li>
+						<li>US$ 1095 per/net for 2 person from same company</li>
+						<li>US$ 895 per/net for 3 or more person from same company</li>
+					</ul>
+					<p style="margin-left:25px;">
+						<span style="font-weight:bold;color:red;">Deadline October 23, 2015</span>
+					</p>
+				</div>
+				<div style="float:left;width:98%;margin-left:5px;">
+					<p>
+						The fee includes lunch, dinner, refreshments and conference profile. Accommodation and travel costs are not included.
+					</p>
+					<p>
+						<span style="font-weight:bold;">Payment:</span> Please make the payment within 5 working days after your registration. Official invoice copy will be send to you by email and original invoice will be given to you on the conference spot.
+					</p>
+					<p>
+						<span style="font-weight:bold;">Cancellation:</span> If you cancel attendance, the registration fee will be refunded only if a written request is received before Oct. 30. No refund will be made thereafter. You may substitute delegates at any time and inform organizer before the conference.
+					</p>
 				</div>
 			</div>
+
 		</div>
 	</div>
 
