--- a/views/sponsor.ejs
+++ b/views/sponsor.ejs
@@ -2,11 +2,11 @@
     <link rel="shortcut icon" href="/images/wiz-icon.png">
 	<link rel="stylesheet" type="text/css" href="/stylesheets/stylemain.css">
 	<style>
-	
+		#sponsor > li {list-style-type:none;padding-bottom: 5px;margin-left: -40px;}
 	</style>
 <head>
 	<title>
-		WIZ | Plasticizer
+		WIZ | Woodchem
 	</title>
 </head>
 
@@ -14,7 +14,7 @@
 	<div id="main">
 		<div id="site">
 			<div id="logo1" style="display:block;">
-				<div id="menu" style="padding-top:22px;float:right;">
+				<div id="menu" style="margin-top: 20px;float:right;">
 					<ul id="ul">
 						<li id="menu_corner" style="float:left; width:20px; height:33px;"></li>
 						<li style="width:53px;background-color:#222222;"><a href="http://wiz-biz.com/">Home</a></li>
@@ -26,37 +26,64 @@
 					</ul>
 				</div>
 			</div>
-			<div id="divcontent" class="content" style="width:1003px;height:450px;background-color:#f5f4f3;">
-				<div style="float:left;width:100%;">
-					<table border="0" align="left">
-						<tbody>
-							<tr>
-								<td style="vertical-align:top;">
-									<div style="width:785px;padding-right:0px;" id="content">
-										<div style=" float:left; width:100%; margin-bottom:12px;">
-											 <div style="float:left; width:600px; text-align:left; overflow:hidden;" align="left"> 
-												 <span style="font-size:15px;font-weight:bold; color:red;text-align:left;">Plasticizer & Feedstock, 12-13 March, 2015,Hong Kong, China<br></span>
-											 </div>
-										</div>
-									</div>
-								</td>
-							</tr>
-						
-							<tr>
-								<td style="text-align:left;padding-left:10px;vertical-align:top;padding-right:10px;padding-top:5px;">
-									<span style="font-size:15px;font-weight:bold;margin-left:450px;">Sponsor</span></br>
-									<span style="font-size:13px;margin-left:250px;">Customized sponsorship packages are designed to help your company obtain its marketing</span></br>
-									<span style="font-size:13px;margin-left:250px;">and lead generation objectives. Whether your goal is to showcase a new product in our exhibit</span></br>
-									<span style="font-size:13px;margin-left:250px;">hall, or to present your latest technology or solution during a conference session, your</span></br>
-									<span style="font-size:13px;margin-left:250px;">sponsorship package will strategically place you in front of qualified clients.</span></br>
-									<span style="font-size:13px;margin-left:250px;">Please contact <span style="font-weight:bold;color:blue;">Ms. Penny Wang</span> for sponsorship details</span></br>
-									</br>
-									<span style="font-size:13px;margin-left:250px;">Tel: +86-21-60246389</span></br>
-									<span style="font-size:13px;margin-left:250px;">E-mail: <u style="color:blue;">pennywang@wiz-biz.com</u></span>
-								</td>
-							</tr>
-						</tbody>
-					</table>
+			<div id="divcontent" class="content" style="width:1003px;background-color:#f5f4f3;">
+				<div style="text-align:left;overflow:hidden;padding-left:5px;"> 
+					<span style="font-size:14px;font-weight:bold;color:red;text-align:left;">
+						WoodChem 2015,4th-5th November,Kuala Lumpur, Malaysia
+					</span>
+				</div>
+
+				<div style="width:100%;padding-left:5px;margin-top:10px;">
+					<h3>Sponsor</h3>
+					<p>Please Contact for More Well-tailored Package</p>
+					<p>Tel: +86-21-60246389</p>
+					<p>E-mail: info@wiz-biz.com</p>
+				</div>
+			
+				<div style="width:100%;padding-left:5px;margin-top:10px;">
+					<div style="border-top:1px solid gray;margin-bottom:10px;width:98%;"></div>
+					<h3>Main Sponsor</h3>
+					<ul id="sponsor">
+						<li>* Exclusive</li>
+						<li>* Welcome and Opening Address on first day</li>
+						<li>* One Keynote Speech (30 minutes)</li>
+						<li>* Max 5 guest passes from Same company (including the speaker)</li>
+						<li>* Two page color AD in conference workbook</li>
+						<li>* Words write-up in conference work book and website (Top Position)</li>
+						<li>* Logo on website, conference materials, e-mail marketing campaigns, print ADs, meal ticket (Maximum Visibility & Top Position)</li>
+						<li>* 3Mx2M Exhibit Space (Note: sponsor is responsible for supplying audio-visual technology, banner stand and booth backdrop)</li>
+						<li>* Company logo/banner as Main Sponsor will be put at meal and coffee break within the conference area</li>
+					</ul>
+				</div>
+
+				<div style="width:100%;padding-left:5px;margin-top:10px;">
+					<div style="border-top:1px solid gray;margin-bottom:10px;width:98%;"></div>
+					<h3>Lunch / Dinner Sponsor</h3>
+					<ul id="sponsor">
+						<li>* Exclusive</li>
+						<li>* Welcome Address before lunch/dinner (5-10 minutes)</li>
+						<li>* Treat your client hospitality as host</li>
+						<li>* Logo on website, conference materials, e-mail marketing campaigns, print ADs</li>
+						<li>* Exclusive company banner positioned within the dinner area</li>
+						<li>* Table ADs could be displayed on all the tables</li>
+						<li>* 200 word write-up in conference work book and website</li>
+						<li>* 2 Guest passes from Same company</li>
+						<li>* One page 4 color AD in conference workbook</li>
+					</ul>
+				</div>
+
+				<div style="width:100%;padding-left:5px;margin-top:10px;">
+					<div style="border-top:1px solid gray;margin-bottom:10px;width:98%;"></div>
+					<h3>Break/Exhibition Sponsor</h3>
+					<ul id="sponsor">
+						<li>* Including tea, coffee and refreshment</li>
+						<li>* Company banner positioned within the conference tea break area</li>
+						<li>* Logo on website, conference materials, e-mail marketing campaigns, print Ads, meal ticket (where spaces allow)</li>
+						<li>* 200 word write-up in conference work book and website</li>
+						<li>* 3Mx2M Exhibit Space (Note: sponsor is responsible for supplying audio-visual technology, banner stand and booth backdrop)</li>
+						<li>* 2 free guest passes from Same company</li>
+						<li>* One page 4 color AD in conference workbook</li>
+					</ul>
 				</div>
 			</div>
 		</div>
