--- a/public/stylesheets/agenda.css
+++ b/public/stylesheets/agenda.css
@@ -1,4 +1,6 @@
+/*
 #menu > ul > li{ background-color:#222222; }
+*/
 
 .TD_time {text-align:right;padding-left:10px;vertical-align:top;padding-right:10px;padding-top:5px;}
 		  
