--- a/views/speaker.ejs
+++ b/views/speaker.ejs
@@ -3,7 +3,7 @@
 	<link rel="stylesheet" type="text/css" href="/stylesheets/stylemain.css">
 <head>
 	<title>
-		WIZ | Plasticizer
+		WIZ | Woodchem
 	</title>
 </head>
 
@@ -11,7 +11,7 @@
 	<div id="main">
 		<div id="site">
 			<div id="logo1" style="display:block;">
-				<div id="menu" style="padding-top:22px;float:right;">
+				<div id="menu" style="margin-top: 20px;float:right;">
 					<ul id="ul">
 						<li id="menu_corner" style="float:left; width:20px; height:33px;"></li>
 						<li style="width:53px;background-color:#222222;">
@@ -36,9 +36,18 @@
 				</div>
 			</div>
 			
-			<div id="divcontent" style="width:1003px;height:1026px;background-color:#f5f4f3;">
+			<div id="divcontent" style="width:1003px;background-color:#f5f4f3;margin-top:20px;">
+				<div>
+					<h3 align="center" style="font-size:14px;align:center;">Call For Papers</h3>
+					<p style="margin-left:80px;margin-right:80px;">
+						Wiz Biz is pleased to announce that the WoodChem 2015 will be held in Kuala Lumpur during November 4 to 5.
+						In preparation for the event, we would like to issue the following call for papers.Abstracts for presentations can be submitted via e-mail to 
+						<span style="font-weight:bold;">pennywang@wiz-biz.com by September 30, 2015.</span> 
+						As the conference language will be English, the text of the abstracts should be submitted in English only.
+					</p>
+				</div>
 				<div align="center">
-					<img src="/images/speaker.png"></img>
+					<img src="/images/speaker.jpg"></img>
 				</div>
 			</div>
 			
