--- a/views/event.ejs
+++ b/views/event.ejs
@@ -54,8 +54,8 @@
 
 			<div id="divcontent" class="content" style="width:1003px;">
 				<div style="float:left;width:600px;text-align:left;overflow:hidden;padding-left:5px;"> 
-					<span style="font-size:1WoodChem 2015,4th-5th November,Kuala Lumpur, Malaysia4px;font-weight:bold;color:red;text-align:left;">
-						
+					<span style="font-size:14px;font-weight:bold;color:red;text-align:left;">
+						WoodChem 2015,4th-5th November,Kuala Lumpur, Malaysia
 					</span>
 				</div>
 				
