--- a/views/agenda.ejs
+++ b/views/agenda.ejs
@@ -47,7 +47,7 @@
 			</div>
 			<div id="divcontent" style="width:1003px;background-color:#f5f4f3;">
 				<div align="center">
-						<img src="/images/agenda.png"></img>
+						<img src="/images/woodchem-agenda.png"></img>
 				</div>
 			</div>
 		</div>
