--- a/views/register.ejs
+++ b/views/register.ejs
@@ -34,17 +34,15 @@
 				</div>
 				<div style="float:left;width:40%;padding-left:5px;padding-top:5px;">
 					<h3 align="center" style="font-size:14px;align:center;">Registration</h3>
-					<p align="center">Ms. Jenny Yang</p>
+					<p align="center">Ms. Penny Wang</p>
 					<p align="center">Tel: +86-21-60246389</p>
 					<p align="center">E-mail: info@wiz-biz.com</p>
 				</div>
 				<div style="float:left;width:40%;padding-left:5px;padding-top:5px;">
 					<h3 align="center" style="font-size:14px;align:center;">Registration fee</h3>
 					<ul id="fee">
-						<li>Early Bird US$895/per/net Before September 25th</li>
 						<li>US$ 1295 per/net for 1 person</li>
 						<li>US$ 1095 per/net for 2 person from same company</li>
-						<li>US$ 895 per/net for 3 or more person from same company</li>
 					</ul>
 					<p style="margin-left:25px;">
 						<span style="font-weight:bold;color:red;">Deadline October 23, 2015</span>
