--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -17,7 +17,7 @@
 				<div id="menu" style="padding-top:22px;float:right;">
 					<ul id="ul">
 						<li id="menu_corner" style="float:left; width:20px; height:33px;"></li>
-						<li style="width:53px;background-color:#222222;"><a href="/home">Home</a></li>
+						<li style="width:53px;background-color:#222222;"><a href="http://wiz-biz.com/">Home</a></li>
 						<li style="width:104px;background-color:#222222;"><a href="/event">About Event</a></li>
 						<li style="width:111px;background-color:#222222;"><a href="/agenda">Event Agenda</a></li>
 						<li style="width:128px;background-color:#222222;"><a href="/speaker">Speaker Profile</a></li>
