--- a/views/event.ejs
+++ b/views/event.ejs
@@ -2,32 +2,14 @@
     <link rel="shortcut icon" href="/images/wiz-icon.png">
 	<link rel="stylesheet" type="text/css" href="/stylesheets/stylemain.css">
 	<style>
-		a:link { 
-			color:red; 
-			text-decoration:underline; 
-		} 
-		a:visited { 
-			color:blue; 
-			text-decoration:none; 
-		} 
-		a:hover { 
-			color:red; 
-			text-decoration:none; 
-		} 
-		a:active { 
-			color:#FFFFFF; 
-			text-decoration:none; 
-		} 
-
-		.image-title{font-size:17px;color:red;font-weight:bold;}
-
-		.image ul{list-style:none;}
-
-		.image ul li{float:left;margin-right:30px;margin-left:-20px;}
-
+		a:link { color:red; text-decoration:underline; } 
+		a:visited { color:blue; text-decoration:none; } 
+		a:hover { color:red; text-decoration:none; } 
+		a:active { color:#FFFFFF; text-decoration:none; } 
 		#highlight > li{list-style-type:none;padding-bottom: 5px;margin-left: -30px;}
-
 		#attend > li{list-style-type:none;padding-bottom: 5px;margin-left: -30px;}
+		#partner > li {list-style:none;}
+		#partner > li > a > img {margin-left:250px;}
 	</style>
 <head>
 	<title>
@@ -102,12 +84,18 @@
 						<li>- Others</li>
 					</ul>
 				</div>
+				<div style="position:relative;margin-top:205px;left:-230px;">
+					<h3 style="font-size:14px;">Partner</h3>
+					<ul id="partner">
+						<li>
+							<a href="http://www.panelsfurnitureasia.com" target="_blank">
+								<img src="/images/PFA.jpg">
+							</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</div>
 	</div>
-
-
- 
 </body>
-
 </html>
